feat: add segment operations logs
