# trainee/docs/swagger.json
@@ -13,6 +13,49 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/log": {
+            "get": {
+                "description": "Get log of user's segments operations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get log",
+                "parameters": [
+                    {
+                        "description": "Log JSON",
+                        "name": "segment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/core.LogRequestDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core.LogResponse"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/core.FailureMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/core.FailureMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/segment": {
             "post": {
                 "description": "Create new segment by slug",
@@ -203,6 +246,28 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "core.LogRequestDto": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "period": {
+                    "type": "string"
+                }
+            }
+        },
+        "core.LogResponse": {
+            "type": "object",
+            "properties": {
+                "cssFile": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         },
